# rusty

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md
doc/: build_process.md  directories.md  rusty.md  template.md
example/: config.toml  index.md
example/_tpl/: base.html  default.html
example/contact/: index.md
example/pages/review/: index.md
src/: asset.rs  build.rs  compile.rs  config.rs  item.rs  main.rs  meta.rs  page.rs  template.rs  transform.rs
tests/: page.md
tests/_tpl/: default.html
