[package]
name = "rusty"
version = "0.1.0"
authors = ["Eunchan Kim <me@eunchan.kim>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
comrak = "0.10"
serde_derive = "1.0.152"
toml = "0.5.10"
serde = "1.0.152"
clap = { version = "4.0.32", features = ["derive"] }
regex = "1.7.1"
