[package]
name = "rusty"
version = "0.1.0"
authors = ["Eunchan Kim <me@eunchan.kim>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
chrono = "0.4"
dateparser = "0.2"
comrak = "0.10"
regex = "1.7.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_yaml = "0.9"
tera = "1"
toml = "0.5.10"
walkdir = "2"
